# genesismesh

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION_POLICY.md  Dockerfile  Executive_Summary.md  Presentation_Speech.md  README.md  SECURITY.md  VISION.md  deploy_to_azure.ps1  deploy_to_azure.sh  genesis.json  genesis.signed.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start.sh  wrangler.jsonc
.claude/commands/: sdk-ship.md  ship.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  deploy-azure.yml  deploy-release-azure-vm.yml  docs.yml  publish-pypi.yml
clients/typescript-node/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
conformance/: CONFORMANCE.md  README.md  generate_vectors.py  runner.py
conformance/vectors/: attestations.json  consensus.json  data_usage.json  ibct.json  revocation.json  selective_disclosure.json  signatures.json  treaties.json  trust_evidence.json
docs/: CNAME  changelog.md  conf.py  genesis-blueprint.md  index.md  installation.md  plan.md  provenance-2017-to-phase-2.md  quickstart.md  requirements.txt  stability.md  tutorial.md
docs/_templates/: page.html
docs/api/: trust-http.md
docs/concepts/: architecture.md  certificate-lifecycle.md  comparison.md  context.md  deployment-scenarios.md  design-goals.md  glossary.md  introduction.md  overview.md  protocol.md  routing.md  security-model.md  trust-model.md  use-cases.md
docs/development/: atlas.md  contributing.md  externalization.md  governance-baseline.md  governance.md  history.md  milestones.md  module-structure.md  rfc-program.md  (+8 more)
examples/: quickstart.sh  test_workflow.py
genesis_mesh/: __init__.py
infrastructure/: README.md  main.tf  universal_boot.sh  variables.tf
ops/: README.md  go-to-market.md  plan-v0.1.0.md  plan-v0.10.0.md  plan-v0.11.0.md  plan-v0.12.0.md  plan-v0.12.1.md  plan-v0.13.0.md  plan-v0.14.0.md  plan-v0.15.0.md  plan-v0.16.0.md  plan-v0.16.1.md  plan-v0.16.2.md  plan-v0.17.0.md  plan-v0.17.1.md  plan-v0.17.10.md  plan-v0.17.11.md  plan-v0.17.2.md  plan-v0.17.3.md  plan-v0.17.4.md  plan-v0.17.5.md  plan-v0.17.6.md  plan-v0.17.7.md  plan-v0.17.8.md  plan-v0.17.9.md  plan-v0.18.0.md  plan-v0.19.0.md  plan-v0.2.0.md  plan-v0.20.0.md  plan-v0.21.0.md  plan-v0.21.1.md  plan-v0.21.2.md  plan-v0.22.0.md  plan-v0.23.0.md  plan-v0.24.0.md  plan-v0.25.0.md  plan-v0.26.0.md  plan-v0.27.0.md  plan-v0.28.0.md  plan-v0.29.0.md  (+52 more)
scripts/: check_added_large_files.py
src/: cloudflare-worker.js
(+579 files in other folders)
