[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-mesh"
version = "0.17.1"
description = "Sovereign trust, identity, and communication fabric for AI agents, edge systems, and distributed infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "mesh",
    "p2p",
    "noise-protocol",
    "ed25519",
    "decentralized",
    "trust",
    "identity",
    "revocation",
    "sovereign",
    "agents",
]
authors = [
    { name = "Thaer Saidi", email = "thaer.saidi@outlook.com" },
]
maintainers = [
    { name = "Thaer Saidi", email = "thaer.saidi@outlook.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Flask",
]
dependencies = [
    "cryptography==48.0.0",
    "PyNaCl==1.6.2",
    "requests==2.34.2",
    "Flask==3.1.3",
    "pydantic==2.13.4",
    "python-dateutil==2.9.0.post0",
    "click==8.4.1",
    "dissononce==0.34.3",
    "websockets==16.0",
    "gunicorn==22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "mypy==2.1.0",
    "pip-audit==2.10.0",
    "pre-commit==4.4.0",
]
docs = [
    "sphinx==9.1.0",
    "furo==2025.12.19",
    "myst-parser==5.1.0",
    "sphinxcontrib-mermaid==2.0.2",
]

[project.urls]
Homepage = "https://genesismesh.connectorzzz.com"
Documentation = "https://genesismesh.connectorzzz.com"
Repository = "https://github.com/thaersaidi/genesismesh"
Issues = "https://github.com/thaersaidi/genesismesh/issues"
Releases = "https://github.com/thaersaidi/genesismesh/releases"
"Live Deployment" = "https://na.genesismesh.connectorzzz.com"

[project.scripts]
genesis-mesh = "genesis_mesh.cli.main:main"
genesis-mesh-na = "genesis_mesh.na_service.server:main"
genesis-mesh-node = "genesis_mesh.cli.node_cmd:main"

[tool.setuptools.packages.find]
include = ["genesis_mesh*"]
exclude = ["genesis_mesh.tests*"]

[tool.setuptools.package-data]
"genesis_mesh.na_service.operator_console" = ["static/*"]

# Pytest configuration lives in pytest.ini (predates this file).
